--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col text-center">
       <p class="footer-distributed">
-        <img id="avatar" alt="BC Developers' Exchange" height="45px;" src="/modules/core/client/img/brand/favicon.png">
+        <img id="avatar" alt="Sovrin's Developer Exchange" height="45px;" src="/modules/core/client/img/brand/favicon.png">
         © 2019 Sovrin Foundation Developers' Exchange
       </p>
     </div>
@@ -21,10 +21,6 @@
         &nbsp; &nbsp;
         <a id="codewithus" href="/codewithus">Code With Us</a>
         &nbsp; &nbsp;
-        <a id="sprintwithus" href="/sprintwithus">Sprint With Us</a>
-        &nbsp;&nbsp;
-        <a id="api" href="http://apilist.pathfinder.gov.bc.ca/">APIs</a>
-        &nbsp; &nbsp;
         <a id="authentication.signinadmin" ui-sref="authentication.signinadmin">Admin Login</a>
         &nbsp; &nbsp;
         <a id="copyright" href="/copyright">Copyright</a>
@@ -35,6 +31,14 @@
         &nbsp; &nbsp;
         <a id="accessibility" href="/accessibility">Accessibility</a>
         &nbsp; &nbsp;
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      <p class="footer-distributed">
+        <img id="idramp_avatar" alt="Sponsored by" height="30px;" src="/modules/core/client/img/brand/IdRamp_white.png">
+         &nbsp; Powered by IdRamp a Sovrin Steward
       </p>
     </div>
   </div>
