--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,3 +1,7 @@
+<script type="text/javascript">
+  // Notice how this gets configured before we load Font Awesome
+  window.FontAwesomeConfig = { autoReplaceSvg: false }
+</script>
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <div class="container" ng-controller="HeaderController as vm">
     <div class="navbar-header">
