--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,4 +1,4 @@
-<!-- // Please save in case we want to use this for the 2020 BCTECHSummit 
+<!-- // Please save in case we want to use this for the 2020 BCTECHSummit
 <div class="bc-tech-homepage-banner">
   <div class="container">
     <div class="row d-flex justify-content-center">
@@ -10,7 +10,7 @@
 </div>
 -->
 
-<section class="bg-dark py-5">  
+<section class="bg-dark py-5">
   <div class="container">
     <div class="row py-5 text-center text-light">
       <div class="col">
@@ -24,29 +24,14 @@
 <!-- CWU / SWU -->
 <section class="bg-light py-5">
   <div class="container">
-    <div class="row py-5">
-      <div class="col-md-6 py-2">
+    <div class="row justify-content-center py-5">
+      <div class="col-md-6 col-md-offset-4 py-2">
         <div class="card h-100 align-items-center" ui-sref="codewithus">
           <img class="" height="125" width="190" src="/modules/core/client/img/photos/cwu.png" alt="Developer">
           <div class="card-body text-center">
             <h2>Code With Us</h2>
             <p class="subtitle"><strong>Commit code.<br>Get paid.</strong></p>
             <a class="btn btn-primary" data-automation-id="button-codewithus" href="/codewithus" title="Learn more about Code With Us">Learn
-              More</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 py-2">
-        <div class="card h-100 align-items-center" ui-sref="sprintwithus">
-          <img class="" height="125" width="190" src="/modules/core/client/img/photos/agile-team.png" alt="Agile Team">
-          <div class="card-body text-center">
-            <h2>Sprint With Us</h2>
-            <p class=" subtitle">Supply
-              an <span class="strong">Agile team</span> to work with a government
-              product manager in a modern DevOps environment.</p>
-            <p class="subtitle">Opportunities up to <strong>$2 million</strong></p>
-            <a class="btn btn-primary" data-automation-id="button-sprintwithus" href="/sprintwithus" title="Learn more about Sprint With Us">Learn
               More</a>
           </div>
         </div>
