--- a/modules/opportunities/client/views/cwu-opportunity-edit-details.html
+++ b/modules/opportunities/client/views/cwu-opportunity-edit-details.html
@@ -66,7 +66,7 @@
     <div class="row">
       <form-input class="col" ng-model="vm.opportunity.deadline" x-form="vm.opportunityForm" x-options='{
           "title":"Proposal Deadline",
-          "help":"<p>Choose a <b>cutoff date</b> for receiving Proposals. (Time of day is fixed at 16:00 Pacific Time.)</p> <p>The longer lead time you give, the more Proposals you are likely to get. A deadline at least <b>5 days</b> from when you publish is a good aim.</p> <p>Make sure you have your <b>opportunity contact</b> lined up to respond to questions on the GitHub Issue in a timely manner, from the time you publish the opportunity right up to the cutoff time.</p>",
+          "help":"<p>Choose a <b>cutoff date</b> for receiving Proposals. (Time of day is fixed at 23:59 UTC.)</p> <p>The longer lead time you give, the more Proposals you are likely to get. A deadline at least <b>5 days</b> from when you publish is a good aim.</p> <p>Make sure you have your <b>opportunity contact</b> lined up to respond to questions on the GitHub Issue in a timely manner, from the time you publish the opportunity right up to the cutoff time.</p>",
           "id":"deadline",
           "name":"deadline",
           "format":"MMMM dd, yyyy",
@@ -75,7 +75,7 @@
       </form-input>
       <form-input class="col" ng-model="vm.opportunity.assignment" x-form="vm.opportunityForm" x-options='{
           "title":"Assignment Date",
-          "help":"Choose a date that you will commit to assigning someone to this opportunity (dependent, of course, on at least one of the Proposals meeting your minimum requirements). (Time of day is fixed at 16:00 Pacific Time.)",
+          "help":"Choose a date that you will commit to assigning someone to this opportunity (dependent, of course, on at least one of the Proposals meeting your minimum requirements). (Time of day is fixed at 23:59 UTC.)",
           "id":"assignment",
           "name":"assignment",
           "format":"MMMM dd, yyyy",
