--- a/modules/opportunities/client/views/opportunity-create.html
+++ b/modules/opportunities/client/views/opportunity-create.html
@@ -1,7 +1,7 @@
 <section class="m-4">
   <div class="container">
-    <div class="row">
-      <div class="col text-center">
+    <div class="row justify-content-center">
+      <div class="col-md-4 col-sm-12 text-center">
         <h2><i class="fas fa-tag"></i> &nbsp;Code With Us</h2>
         <p class="subtitle"><span class="strong">Pay a fixed price for delivery of code</span> that meets your
           acceptance criteria.</p>
@@ -12,22 +12,6 @@
         <button data-automation-id="button-create-codewithus" ng-if="vm.userCanAdd" class="btn btn-lg btn-block btn-primary"
           ui-sref="createcwu({programId:vm.programId, projectId:vm.projectId, programTitle:vm.programTitle, projectTitle:vm.projectTitle, context:vm.context})"
           title="Create Code With Us Opportunity">Get Started &nbsp;<i class="fas fa-lg fa-arrow-circle-right"></i></button>
-      </div>
-      <div class="col-2"></div>
-      <div class="col text-center">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <h2><i class="fas fa-users"></i> &nbsp;Sprint With Us</h2>
-            <p class="subtitle">Quickly <span class="strong">acquire an Agile product team</span> for your digital
-              service.</p>
-            <p class="subtitle">Sprint With Us is designed to rapidly procure a team with the modern capabilities to do
-              Inception, Proof of Concept and Implementation work.</p>
-            <br><br>
-            <button data-automation-id="button-create-sprintwithus" ng-if="vm.userCanAdd" class="btn btn-lg btn-block btn-primary"
-              ui-sref="createswu({programId:vm.programId, projectId:vm.projectId, programTitle:vm.programTitle, projectTitle:vm.projectTitle, context:vm.context})"
-              title="Create Sprint With Us Opportunity">Get Started &nbsp;<i class="fas fa-lg fa-arrow-circle-right"></i></button>
-          </div>
-        </div>
       </div>
     </div>
   </div>
