--- a/modules/users/client/views/authentication/authentication.client.view.html
+++ b/modules/users/client/views/authentication/authentication.client.view.html
@@ -5,9 +5,7 @@
       <div class="col-sm-8 text-light text-center">
         <div id="sovrin">
           <h2 class="mb-2"><img style="width: 75px;" src="/modules/core/client/img/brand/favicon.png" alt=""></h2>
-          <div class="btn btn-lg btn-primary my-5" ng-click="vm.callSamlSignin()">Sign in with Self Sovrin Identity
-
-          </div>
+          <div class="btn btn-lg btn-primary my-5" ng-click="vm.callSamlSignin()">Sign in with Digital Credential</div>
         </div>
         <div id="github">
           <h2 class="mb-2"><i class="fab fa-github fa-2x"></i></h2>
