--- a/modules/users/client/views/settings/profile-main.html
+++ b/modules/users/client/views/settings/profile-main.html
@@ -49,7 +49,7 @@
 #  <div>
 #    <label ng-if="!vm.isGov">
 #      <i class="fas fa-question-circle" uib-tooltip="If you're a public sector employee in British Columbia, you can use the BCDevExchange to pay for code and hire Agile product teams."></i>
-#      <span class="lighter">Verify me as a BC public sector employee so I can post opportunities!</span>
+#      <span class="lighter">Verify me so I can post opportunities!</span>
 #
 #      <button type="button" class="btn btn-sm btn-default" ng-if="!vm.pendingGovRequest" ng-disabled="vm.creatingRequest" ng-click="vm.addGovtRequest()">Send
 #
@@ -59,7 +59,7 @@
 #
 ##    <label ng-if="vm.isGov">
 #      <i class="fas fa-check-circle"></i>
-#      <span class="lighter">You are verified as a public sector employee and can post opportunities!</span>
+#      <span class="lighter">You are verified and can post opportunities!</span>
 #    </label>
 #  </div>
 
