--- a/modules/users/client/views/settings/profile-skills.html
+++ b/modules/users/client/views/settings/profile-skills.html
@@ -1,8 +1,7 @@
 <form name="vm.userForm" id="vm.userForm" ng-submit="vm.updateUserProfile(vm.userForm.$valid)" novalidate autocomplete="off">
 
   <h3 class="settings-panel-title">Capabilities &amp; Skills</h3>
-  <p>Let us know what you can do! <i>Sprint With Us</i> opportunities call for teams with these capabilities and
-    skills.</p>
+  <p>Let us know what you can do!</p>
 
   <fieldset>
     <div class="form-group">
